# instat

./: .gitignore  README.md  pyproject.toml  tic_tac_toe.py  tic_tac_toe_test.py
instat/: __main__.py  weather_client.py
moduleA/: for_import.py
moduleA/project/: script.py
