[tool.poetry]
name = "instat"
version = "0.1.0"
description = ""
authors = ["adonskoi <donskoy.alexander@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
